--- a/styles.css
+++ b/styles.css
@@ -2,87 +2,88 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    /*display: flex;*/
+    display: flex;
     flex-direction: column;
-    /*min-height: 100vh;*/
-    }
+    min-height: 80vh;
+    background-color: aquamarine;
+}
     
-    header{
+header{
     background-color: #333;
     color: white;
     padding: 10px 0;
-    }
+}
     
-    .titulo{
-        width: 50%;
-    margin: 0 0 0 10px;
+.header-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
-    }
+}
     
-    h1{
-        margin: 0;
-    }
-    
-    .opciones{
-        width: 50%;
-    border-left: 3px solid black;
-    
-    }
-    nav ul{
-        display: flex;
-        list-style: none;
-        margin: 0;
-        padding: 0;
-    }
-    
-    nav li{
-        margin: 15px 40px 0 40px;
-    }
-    
-    nav a{
-        color: white;
-        text-decoration: none;
-        padding: 5px 10px;
-        transition: background-color 0.3s ease;
-    }
-    
-    nav a:hover{
-        background-color: #575757;
-        border-radius: 5px;
-    }
+.titulo h1{
+    margin: 0;
+}
 
-    .login-container{
-        background-color: white;
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        max-width: 400px;
-        width: 100%;
-    }
-    .login-form h2{
-        margin-bottom: 20px;
-        color: #333;
-        text-align: center;
-    }
-    .login-form label{
-        display: block;
-        margin-bottom: 5px;
-        color: #555;
-        font-weight: bold;
-    }
-    .login-form input{
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 20px;
-        font-size: 16px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-    }
+nav ul{
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+    
+nav li{
+    margin: 0 20px;
+}
+    
+nav a{
+    color: white;
+    text-decoration: none;
+    padding: 5px 10px;
+    transition: background-color 0.3s ease;
+}
+    
+nav a:hover{
+    background-color: #575757;
+    border-radius: 5px;
+}
+
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.login-container{
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,1);
+    max-width: 400px;
+    width: 100%;
+}
+.login-form h2{
+    margin-bottom: 20px;
+    color: #333;
+    text-align: center;
+}
+.login-form label{
+    display: block;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: bold;
+}
+.login-form input{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
     .login-form button{
         width: 100px;
         padding: 10px;
