--- a/react-app/mi-app-react/src/App.css
+++ b/react-app/mi-app-react/src/App.css
@@ -5,7 +5,7 @@ body{
   display: flex;
   flex-direction: column;
   min-height: 80vh;
-  background-color: aquamarine;
+  background-color: white;
 }
   
 header{
