--- a/react-app/mi-app-react/src/App.css
+++ b/react-app/mi-app-react/src/App.css
@@ -20,8 +20,58 @@ header{
   align-items: center;
   max-width: 1200px;
   margin: 0 auto;
+  /*padding: 0 20px;*/
+}
+
+.header-container nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
   padding: 0 20px;
 }
+
+
+.boton1{
+  color: white;
+  background-color: black;
+  border-radius: 200px;
+  margin-right: 20px;
+  width: 100px;
+  text-align: center;
+  border: 2px solid white;
+  padding: 5px;
+}
+.boton2{
+  background-color: black;
+  color: white;
+  border-radius: 200px;
+  width: 100px;
+  text-align: center;
+  border: 2px solid white;
+  padding: 5px;
+}
+
+.a{
+  color: white;
+  text-decoration: none;
+}
+
+.boton1:hover{
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+}
+.boton2:hover{
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+}
+.a:hover{
+  color: black;
+}
+
   
 .titulo h1{
   margin: 0;
@@ -66,41 +116,46 @@ main{
 .login-container{
   background-color: white;
   padding: 30px;
+  margin-top: 60px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,1);
-  max-width: 400px;
+  max-width: 300px;
   width: 100%;
 }
 .login-form h2{
+  margin: 20px;
   margin-bottom: 20px;
   color: #333;
   text-align: center;
 }
 .login-form label{
+  margin: 20px;
   display: block;
   margin-bottom: 5px;
   color: #555;
   font-weight: bold;
 }
 .login-form input{
-  width: 100%;
+  margin: 20px;
+  width: 80%;
   padding: 10px;
   margin-bottom: 20px;
   font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
-  .login-form button{
-      width: 100px;
-      padding: 10px;
-      font-size: 16px;
-      background-color: #333;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-  }
+.login-form button{
+  margin: 20px;
+  width: 100px;
+  padding: 10px;
+  font-size: 16px;
+  background-color: #333;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
   .login-form button:hover{
       background-color: #0056b3;
   }
