--- a/react-app/mi-app-react/src/App.css
+++ b/react-app/mi-app-react/src/App.css
@@ -7,44 +7,32 @@ body{
   min-height: 80vh;
   background-color: white;
 }
-h5{
-  text-align: center;
-}
+
   
 header{
   background-color: #333;
   color: white;
-  padding: 10px 0;
+  padding: 10px 20px 10px 20px ;
 }
   
 .header-container{
   display: flex;
-  justify-content: space-between;
-  align-items: center;
   max-width: 1200px;
-  margin: 0 auto;
   /*padding: 0 20px;*/
 }
 
-.header-container nav{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
 
 
 .boton1{
+  margin: 0px 10px 0px 600px;
   color: white;
   background-color: black;
   border-radius: 200px;
-  margin-right: 20px;
   width: 100px;
   text-align: center;
   border: 2px solid white;
-  padding: 5px;
+  padding: 10px 15px 10px 15px;
+  text-decoration: none;
 }
 .boton2{
   background-color: black;
@@ -53,13 +41,11 @@ header{
   width: 100px;
   text-align: center;
   border: 2px solid white;
-  padding: 5px;
-}
-
-.a{
-  color: white;
+  padding: 10px 15px 10px 15px;
   text-decoration: none;
 }
+
+
 
 .boton1:hover{
   background-color: white;
@@ -71,13 +57,11 @@ header{
   color: black;
   border: 2px solid black;
 }
-.a:hover{
-  color: black;
-}
+
 
   
 .titulo h1{
-  margin: 0;
+  margin: 5px 0px 0px 0px ;
 }
   
 /*
@@ -86,28 +70,6 @@ header{
   border-left: 3px solid black;
 }*/
 
-nav ul{
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-  
-nav li{
-  margin: 0 20px;
-}
-  
-nav a{
-  color: white;
-  text-decoration: none;
-  padding: 5px 10px;
-  transition: background-color 0.3s ease;
-}
-  
-nav a:hover{
-  background-color: #575757;
-  border-radius: 5px;
-}
 
 main{
   display: flex;
@@ -161,4 +123,7 @@ main{
 }
   .login-form button:hover{
       background-color: #0056b3;
+  }
+  h5{
+    text-align: center;
   }
